lib/ein/src/compile/type_inference/snapshots/ein__compile__type_inference__type_inferrer__tests__union__canonicalize_record_type_in_type_definitions.snap
---
source: lib/ein/src/compile/type_inference/type_inferrer.rs
expression: infer_types(&module)
---
Ok(
    Module {
        path: ModulePath {
            package: Package {
                name: "",
                version: "",
            },
            components: [],
        },
        type_definitions: [
            TypeDefinition {
                name: "x",
                type_: Record(
                    Record {
                        name: "Foo",
                        elements: {
                            "foo": Any(
                                Any {
                                    source_information: SourceInformation {
                                        source_name: "",
                                        location: Location {
                                            line_number: 0,
                                            column_number: 0,
                                        },
                                        line: "",
                                    },
                                },
                            ),
                        },
                        source_information: SourceInformation {
                            source_name: "",
                            location: Location {
                                line_number: 0,
                                column_number: 0,
                            },
                            line: "",
                        },
                    },
                ),
            },
        ],
        definitions: [],
        export: Export {
            names: {},
        },
        imports: [],
        builtin_interface: BuiltinInterface {
            types: {},
            functions: {},
        },
    },
)
